--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "8.0.20"
+        "php": "^8.0 || ^8.1"
     },
     "require-dev": {
         "phpstan/phpstan": "*",
